--- a/social.css
+++ b/social.css
@@ -263,7 +263,7 @@ main{
         transform: translateY(3.75rem)
     }
 }
-@media (max-width:1100px){
+@media (min-width:800px) and  (max-width:1100px){
     main{
         /* height:fit-content;
         overflow:hidden; */
@@ -297,7 +297,7 @@ main{
         height:100%;
         /* border: 2px solid black; */
     }
-    .ct{width:78%;   }
+    .ct{width:80%;   }
     .ct img{
         height:0.875rem;
     }
@@ -396,10 +396,12 @@ main{
     .rating{
             padding-top: 2rem;
             height:100%;
-            /* border: 2px black solid; */
+            align-items:center;
             align-items: center;
+            padding:5px;
         }
-    .ct{    flex-direction: column;
+    .ct{    
+           flex-direction: column;
             margin-bottom:1rem;
             border-radius: 0.5rem;
             height:40%;
